# simdez

./: .gitignore  CMakeLists.txt  README  README.md  SGP4.cpp  SGP4.h  Sat.qml  TLE.cpp  TLE.h  attitude.h  dcm.cpp  dcm.h  default.json  euler.h  frame.cpp  frame.h  iau06.cpp  iau06.h  iau06_data.cpp  iau06_data.h  igrf.cpp  igrf.h  igrf_2025.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  maps.cpp  maps.h  qcustomplot.cpp  quat.cpp  resources.qrc  rigid.cpp  rigid.h  satellite.cpp  satellite.h  simulation.cpp  simulation.h  time.cpp  (+1 more)
.qtcreator/: project.json
meshes/: layer_0_mesh.mesh
